--- a/Project CoD/CoD.html
+++ b/Project CoD/CoD.html
@@ -65,9 +65,46 @@
   
  <div>
  <div></div>
-
-
  </div>
+
+  <div class="wrap" >
+
+    <div class="nav1"> 
+      <div>
+      <img src="/wb9/Project CoD/cod-wz2-logo.png" alt="">
+      </div>
+  
+      <div class="text">
+        <p>Welcome to Al Mazrah<br>
+          Ready Up and Drop into Call of Duty<sup>®</sup>: Warzone<sup>TM&nbsp;</sup>2.0</p>
+      </div>
+      
+      <div class="button">
+        <button type="button" class="btn btn-outline-light">Light</button>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="sect">
+    <div class="img1">1</div>
+    <div class="img2">
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+    
+  
+  
+  
+  
+  </div>
+
+
+
 
 
 
