--- a/Project CoD/CoD.html
+++ b/Project CoD/CoD.html
@@ -141,9 +141,29 @@
           </div>
         </div> -->
   
-          <div class="ppg">1</div>
-          <div class="ppg">2</div>
-          <div class="ppg">3</div>
+          <div class="ppg">
+            <div class="ppg1">1</div>
+            <div class="ppg2">
+              <div class="ppg-img"></div>
+              <div class="ppg-txt"><f1>ЗАРЕГИСТРИРУЙТЕСЬ И НАЧНИТЕ БОЙ ПЕРВЫМИ! <br>ОФОРМИТЕ ПРЕДВАРИТЕЛЬНУЮ РЕГИСТРАЦИЮ В CALL OF DUTY©: WARZONE <SUP>TM</SUP> MOBILE</f1> </div>
+            </div>
+          </div>
+          
+          <div class="ppg">
+            <div class="ppg1">1</div>
+            <div class="ppg2">
+              <div class="ppg-img"></div>
+              <div class="ppg-txt">ПОЛУЧИТЕ ДОСТУП КО ВСЕМ 100 ЭТАПАМ ПОСТАВОК БОЕВОГО ПРОПУСКА</div>
+            </div>
+          </div>
+          
+          <div class="ppg">
+            <div class="ppg1">1</div>
+            <div class="ppg2">
+              <div class="ppg-img">img</div>
+              <div class="ppg-txt">BLAST OFF INTO ALL-OUT WAR WITH CALL</div>
+            </div>
+          </div>
   
   
   
